[package]
name = "rz-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rz"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
rz-protocol = { path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
