[package]
name = "rz-cmux"
version = "0.3.0"
edition = "2021"
description = "Inter-agent messaging and swarm coordination for cmux terminal sessions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iliasoroka1/rz-cmux"
keywords = ["agents", "messaging", "terminal", "cmux", "multi-agent"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "rz"
path = "src/main.rs"

[lib]
name = "rz_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
rz-cmux-protocol = { version = "0.1.0", path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
