[package]
name = "rz-cmux-protocol"
version = "0.1.0"
edition = "2021"
description = "@@RZ: wire protocol for inter-agent messaging (transport-agnostic)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iliasoroka1/rz-cmux"
keywords = ["agents", "messaging", "terminal", "cmux", "multi-agent"]
categories = ["command-line-utilities"]

[dependencies]
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
